[package]
name = "RBR-GUI"
version = "0.1.0"
edition = "2021"

[dependencies]
serde =  { version = "1.0.203", features = ["derive"]}
serde_derive = "1.0.203"
sysinfo = "0.30.12"
bincode = "1.3.3"
bevy = "0.13.2"
bevy_egui = "0.27.1"
egui = { version = "0.27", default-features = false, features = ["bytemuck"] }
colortemp = "0.1.0"
